--- a/package.json
+++ b/package.json
@@ -1,24 +1,29 @@
 {
   "name": "marketplace",
-  "proxy": "http://ec2-18-221-181-52.us-east-2.compute.amazonaws.com:8082/api/v2",
+  "proxy": "http://41.76.198.45:8081/api/v2",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
     "@mui/material": "^5.10.15",
+    "@react-bootstrap/pagination": "^1.0.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.1.3",
     "node-sass": "^7.0.3",
     "react": "^18.2.0",
+    "react-bootstrap": "^2.7.0",
     "react-dom": "^18.2.0",
     "react-iconly": "^2.2.5",
     "react-notifications-component": "^4.0.1",
+    "react-paginate": "^8.1.4",
     "react-phone-number-input": "^3.2.12",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
+    "react-toastify": "^8.0.0",
+    "sweetalert": "^2.1.2",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
