--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-notifications-component": "^4.0.1",
     "react-paginate": "^8.1.4",
     "react-phone-number-input": "^3.2.12",
+    "react-responsive-pagination": "^1.10.0",
     "react-router-dom": "^6.4.1",
     "react-scripts": "^2.1.3",
     "react-toastify": "^8.0.0",
